--- a/style.css
+++ b/style.css
@@ -702,6 +702,9 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
 }
 
 h2 {
