--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a:hover {
 }
 
 .row_footer{
-    background-color: blanchedalmond;
+    background-color: rgba(0,0,0,0.6);
 }
 
 .bloc .container {
@@ -682,7 +682,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -761,7 +761,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(0,0,0,0.6);
     padding: 40px 40px 40px 40px;
 }
 
