--- a/style.css
+++ b/style.css
@@ -1,31 +1,4 @@
 
-
-Aller au contenu
-Utiliser Gmail avec un lecteur d'écran
-johnpitton@free.fr 
-Meet
-Nouvelle réunion
-Rejoindre une réunion
-Hangouts
-
-1 sur 5
-P4 - Corrections
-Boîte de réception
-
-john pitton via gmail.com 
-Pièces jointes
-dim. 6 juin 21:16 (il y a 5 jours)
-À moi
-
-Ca me semble pas mal comme ca
-
-Bon courage 
-
-
---
------------------------------------
-John PITTON
-3 pièces jointes
 body {
     margin: 0;
     padding: 0;
@@ -922,13 +895,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -960,8 +933,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+     /*   padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);*/
     }
 }
 
