--- a/style.css
+++ b/style.css
@@ -919,10 +919,10 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-       /* padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);*/
-    }
+    /*.bloc {
+        padding-left: constant(safe-area-inset-left);
+        padding-right: constant(safe-area-inset-right);
+    }*/
 
     
     .bloc-group,
